# study-buddy

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  study_buddy_deep_dive.html  study_buddy_wireframe_mockup.html  studybuddy_context.md  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
apps/web/.next/cache/: .previewinfo  .rscinfo
apps/web/.next/dev/: lock  prerender-manifest.json  trace
apps/web/.next/dev/cache/: .rscinfo
apps/web/.next/dev/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  (+1 more)
apps/web/.next/diagnostics/: route-bundle-stats.json
apps/web/.next/server/: app-paths-manifest.json  functions-config-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
apps/web/.next/types/: validator.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: study-buddy-experience.tsx
apps/web/src/lib/: deck-store.ts  study-engine-client.ts  study-engine-export.ts  study-generator.test.ts  study-generator.ts  supabase.ts
apps/web/src/types/: external.d.ts
services/study-engine/: pyproject.toml
services/study-engine/app/: main.py
supabase/functions/stripe-webhook/: index.ts
tests/: test_study_engine.py
(+144 files in other folders)
